tests/NormalTests/paczka1/fuzzy1/52943505.err
Error in line 6: kuM S226 54,2
Error in line 26: 3ODHU4Hh A834 11,8
Error in line 25: S226 A242 95,7
